--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 
     /* Dimension */
     --box-width: 65px;
+
+    /* Settings */
+    --setting-spacing: 1em;
 }
 
 div.row > input {
@@ -96,4 +99,46 @@ div.active > span.box {
 
 span.allowed {
     background-color:green;
+}
+
+details {
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--setting-spacing) / 2);
+    border: 1px solid white;
+    max-width: 40%;
+}
+
+/* Settings Styles */
+summary {
+    cursor: pointer;
+    padding: var(--setting-spacing);
+    display: flex;
+    gap: 0.25em;
+    user-select: none;
+    letter-spacing: 0.1em;
+}
+
+summary:hover {
+    font-weight: bold;
+    letter-spacing: 0.065em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid white;
+    font-weight: bold;
+    letter-spacing: 0.065em;
+}
+
+div.setting-input {
+    display: flex;
+    cursor: pointer;
+    gap: 15px;
+    margin: var(--setting-spacing);
+}
+
+span.mini-box {
+    padding: 0.25em;
+    margin-right: 0.25em;
+    width: 1.25em;
 }
